Style the nav bar, add font style and icon style.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Plugs</title>
+
+    <link rel="stylesheet" a href="style.css">
+    <script src="https://kit.fontawesome.com/ad3996b87e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="nav-section">
+        <div class="Logo">
+            <img src="Images/Logo.svg" alt="Logo of the Food Plugs Brand">
+        </div>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#fruits">Fruits</a></li>
+            <li><a href="#Vegetables">Vegetables</a></li>
+        </ul>
+        <div class="input">
+            <input type="text" placeholder="Search Products">
+            <button id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+            <button id="drop-down-button"><i class="fa-solid fa-chevron-down"></i></button>
+        </div>
+        <ul class="profile-wishlist-cart">
+            <li><i class="fa-solid fa-user"></i></li>
+            <li><i class="fa-solid fa-heart"></i></li>
+            <li><i class="fa-solid fa-cart-shopping"></i></li>
+            <!-- <div class="icon-set">
+                <div class="icon"><img src="Assets/Profile icon.svg"></div>
+                <div class="icon-text">Profile</div>
+            </div>
+            <div class="icon-set">
+                <div class="icon"><img src="Assets/Heart icon.svg"></div>
+                <div class="icon-text">Wishlist</div>
+            </div>
+            <div class="icon-set">
+                <div class="icon"><img src="Assets/Shopping-cart.svg"></div>
+                <div class="icon-text">Cart</div>
+            </div> -->
+        </div>
+    </div>    
     
 </body>
 </html>
