--- a/index.html
+++ b/index.html
@@ -19,14 +19,28 @@
             <li><a href="#Vegetables">Vegetables</a></li>
         </ul>
         <div class="input">
-            <input type="text" placeholder="Search Products">
-            <button id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
-            <button id="drop-down-button"><i class="fa-solid fa-chevron-down"></i></button>
+            <div class="input-left">
+                <button id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <input class="search-box" type="search" placeholder="Search Products">
+            </div>
+            <div class="drop-down">
+                All Categories
+                <button id="drop-down-button"><i class="fa-solid fa-chevron-down"></i></button>
+            </div>
         </div>
-        <ul class="profile-wishlist-cart">
-            <li><i class="fa-solid fa-user"></i></li>
-            <li><i class="fa-solid fa-heart"></i></li>
-            <li><i class="fa-solid fa-cart-shopping"></i></li>
+        <ul class="profile-wishlist-cart-nav">
+            <!-- <div class="pwc-buttons"> -->
+                <li class="pwc"><i class="fa-solid fa-user"></i>Profile</li>
+                <!-- <div class="pwc-text">Profile</div> -->
+            <!-- </div> -->
+            <!-- <div class="pwc-buttons"> -->
+                <li class="pwc"><i class="fa-solid fa-heart"></i>Wishlist</li>
+                <!-- <div class="pwc-text">Wishlist</div>
+            </div> -->
+            <!-- <div class="pwc-buttons"> -->
+                <li class="pwc"><i class="fa-solid fa-cart-shopping"></i>Cart</li>
+                <!-- <div class="pwc-text">Cart</div>
+            </div> -->
             <!-- <div class="icon-set">
                 <div class="icon"><img src="Assets/Profile icon.svg"></div>
                 <div class="icon-text">Profile</div>
@@ -39,7 +53,7 @@
                 <div class="icon"><img src="Assets/Shopping-cart.svg"></div>
                 <div class="icon-text">Cart</div>
             </div> -->
-        </div>
+        </ul>
     </div>    
     
 </body>
