Position text beneath icons (will) be perfected later.

--- a/index.html
+++ b/index.html
@@ -29,30 +29,9 @@
             </div>
         </div>
         <ul class="profile-wishlist-cart-nav">
-            <!-- <div class="pwc-buttons"> -->
-                <li class="pwc"><i class="fa-solid fa-user"></i>Profile</li>
-                <!-- <div class="pwc-text">Profile</div> -->
-            <!-- </div> -->
-            <!-- <div class="pwc-buttons"> -->
-                <li class="pwc"><i class="fa-solid fa-heart"></i>Wishlist</li>
-                <!-- <div class="pwc-text">Wishlist</div>
-            </div> -->
-            <!-- <div class="pwc-buttons"> -->
-                <li class="pwc"><i class="fa-solid fa-cart-shopping"></i>Cart</li>
-                <!-- <div class="pwc-text">Cart</div>
-            </div> -->
-            <!-- <div class="icon-set">
-                <div class="icon"><img src="Assets/Profile icon.svg"></div>
-                <div class="icon-text">Profile</div>
-            </div>
-            <div class="icon-set">
-                <div class="icon"><img src="Assets/Heart icon.svg"></div>
-                <div class="icon-text">Wishlist</div>
-            </div>
-            <div class="icon-set">
-                <div class="icon"><img src="Assets/Shopping-cart.svg"></div>
-                <div class="icon-text">Cart</div>
-            </div> -->
+                <li class="pwc"><i class="fa-solid fa-user"></i><span>Profile</span></li>
+                <li class="pwc"><i class="fa-solid fa-heart"></i><span>Wishlist</span></li>
+                <li class="pwc"><i class="fa-solid fa-cart-shopping"></i><span>Cart</span></li>
         </ul>
     </div>    
     
