Nav section improved. Hero Section created.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="nav-section">
-        <div class="Logo">
+        <div class="logo">
             <img src="Images/Logo.svg" alt="Logo of the Food Plugs Brand">
         </div>
         <ul class="nav-links">
@@ -33,7 +33,21 @@
                 <li class="pwc"><i class="fa-solid fa-heart"></i><span>Wishlist</span></li>
                 <li class="pwc"><i class="fa-solid fa-cart-shopping"></i><span>Cart</span></li>
         </ul>
-    </div>    
+    </div>
+
+    <div class="hero-section">
+        <div class="hero-text-content">
+            <p id="promo-note">Daily Discount</p>
+            <div class="hero-title">Fruits & Vegetables</div>
+            <div class="hero-text">These superfoods are packed with vital nutirents, including
+                vitamins and minerals that help you get and stay healthy. Additionally, they are super 
+                enjoyable and easy to make.
+            </div>
+            <button class="btns" id="hero-button">View More <i class="fa-solid fa-chevron-right"></i></button>
+        </div>
+        <div class="hero-image"><img src="Images/Hero Image.svg" alt="Image of two fruit baskets containing
+            a variety of a fruits; from bananas, apples, pineapples, oranges, strawberries, etc."></div>
+    </div>
     
 </body>
 </html>
