Optimised search bar btns' code & wrote html for 1/2 of product section.
Removed individual ids from buttons in the search bar
and gave them a class of search-bar-btns, reducing the
number of lines used to style them in the CSS.

Wrote out the html for the first half of the Product
section, showing the menu for fruits

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </ul>
         <div class="input">
             <div class="input-left">
-                <button id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button class="search-bar-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
                 <input class="search-box" type="search" placeholder="Search Products">
             </div>
             <div class="drop-down">
                 All Categories
-                <button id="drop-down-button"><i class="fa-solid fa-chevron-down"></i></button>
+                <button class="search-bar-btn"><i class="fa-solid fa-chevron-down"></i></button>
             </div>
         </div>
         <ul class="profile-wishlist-cart-nav">
@@ -47,6 +47,84 @@
         </div>
         <div class="hero-image"><img src="Images/Hero Image.svg" alt="Image of two fruit baskets containing
             a variety of a fruits; from bananas, apples, pineapples, oranges, strawberries, etc."></div>
+    </div>
+
+    <div class="product-section">
+        <div class="category1">
+            <div class="title-and-button">
+                <div class="category1&2-header">Fruits</div>
+                <button class="btns" id="category1-button">Show More <i class="fa-solid fa-chevron-right"></i></button>
+            </div>
+            <div class="product-menu">
+                <div class="product-box">
+                    <div class="product-image">
+                        <img src="Images/Red Currant.png" alt="">
+                    </div>
+                    <div class="product-text">Variants of Red Currant, just for you.</div>
+                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="product-box">
+                    <div class="product-image">
+                        <img src="Images/Apple-n-knife.png" alt="">
+                    </div>
+                    <div class="product-text">Check out our sliced fruits. You just enjoy!</div>
+                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="product-box">
+                    <div class="product-image">
+                        <img src="Images/Sliced Orange.png" alt="">
+                    </div>
+                    <div class="product-text">Colourful variants of our orange fruits.</div>
+                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="product-box">
+                    <div class="product-image">
+                        <img src="Images/fresh pineapple with slices.png" alt="">
+                    </div>
+                    <div class="product-text">Tasty and succulent pineapples - refreshing and healthy.</div>
+                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="product-box">
+                    <div class="product-image">
+                        <img src="Images/Blackcurrant.png" alt="">
+                    </div>
+                    <div class="product-text">Grapes and Currants. Blackcurrant, Blackberry, Green Grapes, Raisins...</div>
+                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="product-box">
+                    <div class="product-image">
+                        <img src="Images/Apples in a basket.png" alt="">
+                    </div>
+                    <div class="product-text">Red, green or mixed breed. Apples that meet your needs.</div>
+                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="product-box">
+                    <div class="product-image">
+                        <img src="Images/Dates in a bowl.png"">
+                    </div>
+                    <div class="product-text">Ajwa, Deglet, Barhi, Medjool, Zahudi... Dates that make your day.</div>
+                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+                <div class="product-box">
+                    <div class="product-image">
+                        <img src="Images/Cucumbers.png"">
+                    </div>
+                    <div class="product-text">Tasty and succulent pineapples - refreshing and healthy.</div>
+                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="category2">
+            <div class="title-and-button">
+                <div class="category1&2-header">Fruits</div>
+                <button class="btns" id="category1-button">Show More <i class="fa-solid fa-chevron-right"></i></button>
+            </div>
+            <div class="product-menu-card">
+                
+            </div>
+
+        </div>
     </div>
     
 </body>
