Add half of the outline for product card (html) & pngs for the cards.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <div class="product-image">
                         <img src="Images/Red Currant.png" alt="">
                     </div>
+                    <div class="product-title">Red Currants</div>
                     <div class="product-text">Variants of Red Currant, just for you.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
@@ -67,6 +68,7 @@
                     <div class="product-image">
                         <img src="Images/Apple-n-knife.png" alt="">
                     </div>
+                    <div class="product-title">Sliced Fruits</div>
                     <div class="product-text">Check out our sliced fruits. You just enjoy!</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
@@ -74,6 +76,7 @@
                     <div class="product-image">
                         <img src="Images/Sliced Orange.png" alt="">
                     </div>
+                    <div class="product-title">Oranges</div>
                     <div class="product-text">Colourful variants of our orange fruits.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
@@ -81,6 +84,7 @@
                     <div class="product-image">
                         <img src="Images/fresh pineapple with slices.png" alt="">
                     </div>
+                    <div class="product-title">Pineapples</div>
                     <div class="product-text">Tasty and succulent pineapples - refreshing and healthy.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
@@ -88,6 +92,7 @@
                     <div class="product-image">
                         <img src="Images/Blackcurrant.png" alt="">
                     </div>
+                    <div class="product-title">Grapes</div>
                     <div class="product-text">Grapes and Currants. Blackcurrant, Blackberry, Green Grapes, Raisins...</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
@@ -95,6 +100,7 @@
                     <div class="product-image">
                         <img src="Images/Apples in a basket.png" alt="">
                     </div>
+                    <div class="product-title">Apples</div>
                     <div class="product-text">Red, green or mixed breed. Apples that meet your needs.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
@@ -102,13 +108,15 @@
                     <div class="product-image">
                         <img src="Images/Dates in a bowl.png"">
                     </div>
+                    <div class="product-title">Dates</div>
                     <div class="product-text">Ajwa, Deglet, Barhi, Medjool, Zahudi... Dates that make your day.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
-                        <img src="Images/Cucumbers.png"">
+                        <img src="Images/Cucumbers.png" alt="">
                     </div>
+                    <div class="product-title">Cucumbers</div>
                     <div class="product-text">Tasty and succulent pineapples - refreshing and healthy.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
@@ -117,11 +125,25 @@
 
         <div class="category2">
             <div class="title-and-button">
-                <div class="category1&2-header">Fruits</div>
+                <div class="category1&2-header">Vegetables</div>
                 <button class="btns" id="category1-button">Show More <i class="fa-solid fa-chevron-right"></i></button>
             </div>
-            <div class="product-menu-card">
-                
+            <div class="product-menu">
+                <div class="product-menu-card">
+                    <div class="product-menu-card-upper-section">
+                        <div class="product-card-image">
+                            <img src="Images/Fruit basket.png" alt="">
+                        </div>
+                        <button class="add-to-wishlist"><i class="fa-regular fa-heart"></i></button>
+                    </div>
+                    <div class="product-sub-title">Vegetables</div>
+                    <div class="product-name">Carrots, Cucumbers...</div>
+                    <div class="product-name-2?">For clear, radiant skin</div>
+                    <div class="star-rating">
+                        <div class="rating"></div>
+                    </div>
+                    
+                </div>
             </div>
 
         </div>
