Arrange product menu into menu-like format and replaced pineapple image.
Also added lines in the html page to create the card
section of the menu (Vegeatbles), added stars for
rating, and started on the buttons for size and quantity.

See you tomorrow In Sha Allah.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="product-section">
         <div class="category1">
             <div class="title-and-button">
-                <div class="category1&2-header">Fruits</div>
+                <div class="category1n2-header">Fruits</div>
                 <button class="btns" id="category1-button">Show More <i class="fa-solid fa-chevron-right"></i></button>
             </div>
             <div class="product-menu">
@@ -61,7 +61,8 @@
                         <img src="Images/Red Currant.png" alt="">
                     </div>
                     <div class="product-title">Red Currants</div>
-                    <div class="product-text">Variants of Red Currant, just for you.</div>
+                    <div class="product-text">Bursting with tart sweetness and a vibrant glow. Enjoy the frehset Red Currants, 
+                        hand-picked just for you.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="product-box">
@@ -69,7 +70,8 @@
                         <img src="Images/Apple-n-knife.png" alt="">
                     </div>
                     <div class="product-title">Sliced Fruits</div>
-                    <div class="product-text">Check out our sliced fruits. You just enjoy!</div>
+                    <div class="product-text">Freshly sliced and ready to serve. A delightful mix of juicy, colorful fruits to
+                         brighten your day</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="product-box">
@@ -77,7 +79,8 @@
                         <img src="Images/Sliced Orange.png" alt="">
                     </div>
                     <div class="product-title">Oranges</div>
-                    <div class="product-text">Colourful variants of our orange fruits.</div>
+                    <div class="product-text">Citrusy, bright and refreshing. Discover our colourful range of orange varieties 
+                        full of sunshine and flavour.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="product-box">
@@ -85,7 +88,8 @@
                         <img src="Images/fresh pineapple with slices.png" alt="">
                     </div>
                     <div class="product-title">Pineapples</div>
-                    <div class="product-text">Tasty and succulent pineapples - refreshing and healthy.</div>
+                    <div class="product-text">Juicy, golden and naturally sweet. These tropical delights bring a refreshing 
+                        twist to healthy eating.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="product-box">
@@ -93,7 +97,7 @@
                         <img src="Images/Blackcurrant.png" alt="">
                     </div>
                     <div class="product-title">Grapes</div>
-                    <div class="product-text">Grapes and Currants. Blackcurrant, Blackberry, Green Grapes, Raisins...</div>
+                    <div class="product-text">Succulent and bursting with flavour. Explore our range - from blackcurrants and green grapes to sweet raisins...</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="product-box">
@@ -101,12 +105,13 @@
                         <img src="Images/Apples in a basket.png" alt="">
                     </div>
                     <div class="product-title">Apples</div>
-                    <div class="product-text">Red, green or mixed breed. Apples that meet your needs.</div>
+                    <div class="product-text">Crisp, juicy and perfectly balanced. Choose from red, green or mixed apples to 
+                        suit every taste and moment.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
-                        <img src="Images/Dates in a bowl.png"">
+                        <img src="Images/Dates in a bowl.png" alt="">
                     </div>
                     <div class="product-title">Dates</div>
                     <div class="product-text">Ajwa, Deglet, Barhi, Medjool, Zahudi... Dates that make your day.</div>
@@ -117,15 +122,16 @@
                         <img src="Images/Cucumbers.png" alt="">
                     </div>
                     <div class="product-title">Cucumbers</div>
-                    <div class="product-text">Tasty and succulent pineapples - refreshing and healthy.</div>
+                    <div class="product-text">Cool, crisp and refreshing. Hydrating cucumbers for salads, juices or your 
+                        daily healthy routine.</div>
                     <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
 
-        <div class="category2">
+        <!-- <div class="category2">
             <div class="title-and-button">
-                <div class="category1&2-header">Vegetables</div>
+                <div class="category1n2-header">Vegetables</div>
                 <button class="btns" id="category1-button">Show More <i class="fa-solid fa-chevron-right"></i></button>
             </div>
             <div class="product-menu">
@@ -136,17 +142,32 @@
                         </div>
                         <button class="add-to-wishlist"><i class="fa-regular fa-heart"></i></button>
                     </div>
-                    <div class="product-sub-title">Vegetables</div>
                     <div class="product-name">Carrots, Cucumbers...</div>
                     <div class="product-name-2?">For clear, radiant skin</div>
-                    <div class="star-rating">
-                        <div class="rating"></div>
+                    <ul class="rating">
+                        <li><i class="fa-solid fa-star-sharp"></i></li>
+                        <li><i class="fa-solid fa-star-sharp"></i></li>
+                        <li><i class="fa-solid fa-star-sharp"></i></li>
+                        <li><i class="fa-solid fa-star-sharp"></i></li>
+                        <li><i class="fa-light fa-star-sharp"></i></li>
+                    </ul>
+                    <div class="price-tag">
+                        <div class="new-price-tag">$99</div>
+                        <div class="old-price-tag">$125</div>
                     </div>
-                    
+                    <div class="size-and-qty">
+                        <div class="size">
+                            <div class="size-text">Size:</div>
+                            <div class="size-btn">
+                                <button type="button" class="qty-count-minus">-</button>
+                                <input type="number" class="qty-count" min="0" max="15" value="1">
+                                <button type="button" class="qty-count-plus">+</button>
+                            </div>
+                    </div>
                 </div>
             </div>
 
-        </div>
+        </div> -->
     </div>
     
 </body>
