Restyle the product menu section & replace pineapple image.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <button class="btns" id="hero-button">View More <i class="fa-solid fa-chevron-right"></i></button>
         </div>
         <div class="hero-image"><img src="Images/Hero Image.svg" alt="Image of two fruit baskets containing
-            a variety of a fruits; from bananas, apples, pineapples, oranges, strawberries, etc."></div>
+            a variety of a fruits; from bananas, apples, pineapples, oranges, strawberries, etc.">
+        </div>
     </div>
 
     <div class="product-section">
@@ -60,71 +61,87 @@
                     <div class="product-image">
                         <img src="Images/Red Currant.png" alt="">
                     </div>
-                    <div class="product-title">Red Currants</div>
-                    <div class="product-text">Bursting with tart sweetness and a vibrant glow. Enjoy the frehset Red Currants, 
-                        hand-picked just for you.</div>
-                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    <div class="product-title-text-button">
+                        <div class="product-title">Red Currants</div>
+                        <div class="product-text">Bursting with tart sweetness and a vibrant glow. Enjoy the frehset Red Currants, 
+                            hand-picked just for you.</div>
+                        <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
                         <img src="Images/Apple-n-knife.png" alt="">
                     </div>
-                    <div class="product-title">Sliced Fruits</div>
-                    <div class="product-text">Freshly sliced and ready to serve. A delightful mix of juicy, colorful fruits to
-                         brighten your day</div>
-                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    <div class="product-title-text-button">
+                        <div class="product-title">Sliced Fruits</div>
+                        <div class="product-text">Freshly sliced and ready to serve. A delightful mix of juicy, colorful fruits to
+                            brighten your day</div>
+                        <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
                         <img src="Images/Sliced Orange.png" alt="">
                     </div>
-                    <div class="product-title">Oranges</div>
-                    <div class="product-text">Citrusy, bright and refreshing. Discover our colourful range of orange varieties 
-                        full of sunshine and flavour.</div>
-                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    <div class="product-title-text-button">
+                        <div class="product-title">Oranges</div>
+                        <div class="product-text">Citrusy, bright and refreshing. Discover our colourful range of orange varieties 
+                            full of sunshine and flavour.</div>
+                        <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
                         <img src="Images/fresh pineapple with slices.png" alt="">
                     </div>
-                    <div class="product-title">Pineapples</div>
-                    <div class="product-text">Juicy, golden and naturally sweet. These tropical delights bring a refreshing 
-                        twist to healthy eating.</div>
-                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    <div class="product-title-text-button">
+                        <div class="product-title">Pineapples</div>
+                        <div class="product-text">Juicy, golden and naturally sweet. These tropical delights bring a refreshing 
+                            twist to healthy eating.</div>
+                        <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
                         <img src="Images/Blackcurrant.png" alt="">
                     </div>
-                    <div class="product-title">Grapes</div>
-                    <div class="product-text">Succulent and bursting with flavour. Explore our range - from blackcurrants and green grapes to sweet raisins...</div>
-                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    <div class="product-title-text-button">
+                        <div class="product-title">Grapes</div>
+                        <div class="product-text">Succulent and bursting with flavour. Explore our range - from blackcurrants and green grapes to sweet raisins...</div>
+                        <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
                         <img src="Images/Apples in a basket.png" alt="">
                     </div>
-                    <div class="product-title">Apples</div>
-                    <div class="product-text">Crisp, juicy and perfectly balanced. Choose from red, green or mixed apples to 
-                        suit every taste and moment.</div>
-                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    <div class="product-title-text-button">
+                        <div class="product-title">Apples</div>
+                        <div class="product-text">Crisp, juicy and perfectly balanced. Choose from red, green or mixed apples to 
+                            suit every taste and moment.</div>
+                        <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
                         <img src="Images/Dates in a bowl.png" alt="">
                     </div>
-                    <div class="product-title">Dates</div>
-                    <div class="product-text">Ajwa, Deglet, Barhi, Medjool, Zahudi... Dates that make your day.</div>
-                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    <div class="product-title-text-button">
+                        <div class="product-title">Dates</div>
+                        <div class="product-text">Ajwa, Deglet, Barhi, Medjool, Zahudi... Dates that make your day.</div>
+                        <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div class="product-box">
                     <div class="product-image">
                         <img src="Images/Cucumbers.png" alt="">
                     </div>
-                    <div class="product-title">Cucumbers</div>
-                    <div class="product-text">Cool, crisp and refreshing. Hydrating cucumbers for salads, juices or your 
-                        daily healthy routine.</div>
-                    <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    <div class="product-title-text-button">
+                        <div class="product-title">Cucumbers</div>
+                        <div class="product-text">Cool, crisp and refreshing. Hydrating cucumbers for salads, juices or your 
+                            daily healthy routine.</div>
+                        <button class="btns product-info">View More<i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
                 </div>
             </div>
         </div>
